# gh-finder

./: .env.sample  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TEST_README.md  gh_finder.py  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
gh_finder/: __init__.py  cli.py  main.py
gh_finder/api/: __init__.py  client.py  token_manager.py
gh_finder/core/: __init__.py  analyzer.py  evaluator.py  finder.py
gh_finder/models/: __init__.py  profile.py
gh_finder/utils/: __init__.py  ai_prompt_generator.py  checkpoint.py  config.py  paths.py  run_context.py
tests/: README.md  conftest.py  test_conversion.py  test_helpers.py  test_merger_info_simple.py  test_pr_analysis.py  test_pr_details.py  test_single_analysis.py  test_tokens.py
utils/check/: check_rate_limit.py  check_tokens_example.py  verify_installation.py
utils/debug/: debug_auth.py  debug_pygithub.py  trace_tokens.py
utils/examples/: llm_analysis_example.py  show_evaluator_weights.py
utils/scripts/: run_all_tests.py  run_tests.sh  test.sh
